--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,15 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+    - name: Install Docker Compose
+      run: |
+        sudo apt-get update && sudo apt-get install -y docker-compose
+    - name: Start Docker Compose
+      run: |
+        docker-compose up -d
     - name: Build with Gradle
       run: |
         gradle clean build
+    - name: Stop Docker Compose
+      run: |
+        docker-compose down
