--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-
   mongodb:
     image: 'mongo:latest'
     networks:
@@ -16,13 +15,45 @@ services:
     volumes:
       - mongodata:/data/db
 
-
   redis:
     image: 'redis:latest'
     networks:
       - dev-env
     ports:
       - "6379:6379"
+
+  zookeeper:
+    image: 'bitnami/zookeeper:latest'
+    networks:
+      - dev-env
+    ports:
+      - "2181:2181"
+    environment:
+      ALLOW_ANONYMOUS_LOGIN: 'yes'  # Set this environment variable to allow unauthenticated users
+
+  kafka:
+    image: 'wurstmeister/kafka:latest'
+    networks:
+      - dev-env
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_CREATE_TOPICS: "your_topic:1:1"
+
+  kafka-manager:
+    image: hlebalbau/kafka-manager:latest
+    networks:
+      - dev-env
+    ports:
+      - "9000:9000"
+    environment:
+      ZK_HOSTS: "zookeeper:2181"
+      APPLICATION_SECRET: "random-secret"
 
 volumes:
   mongodata:
