AS-TEST-004 Write tests for producer cleanup - Fix application.yml

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       host: localhost
       port: 27017
       database: mainDb
-      uri: mongodb://localhost:27017/mainDb
+      uri: mongodb://localhost:27017/testDb
   kafka:
     producer:
       topic: 'account-token-cleanup'
